# python-project-50

./: .flake8  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
gendiff/: build_diff.py  generate_diff.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_logic.py
tests/fixtures/: __init__.py  files.py
