[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = ""
authors = ["Sustavov Maksim <maksim.sustavov@edgecenter.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
