[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sustavov Maksim <maksim.sustavov@edgecenter.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.coverage.run]
source = ["hexlet-code"]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
flake8-isort = "^6.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.isort]
profile = "black"
line_length = 80
include_trailing_comma = true
multi_line_output = 3
default_section = "FIRSTPARTY"
